--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    //modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     // Fabric API
     modImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
@@ -34,8 +34,12 @@ dependencies {
     modImplementation "maven.modrinth:cyanlib:${project.cyanlib_version}"
     include "maven.modrinth:cyanlib:${project.cyanlib_version}"
 
+    // ModMenu
     modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
     modLocalRuntime("com.terraformersmc:modmenu:${project.mod_menu_version}")
+
+    // Continuity
+    modLocalRuntime("maven.modrinth:continuity:3.0.0-beta.3+1.20.1")
 
     // Gson
     implementation 'com.google.code.gson:gson:2.10.1'
