--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 
     // Gson
     implementation 'com.google.code.gson:gson:2.10.1'
+
+    // zip4j
+    implementation 'net.lingala.zip4j:zip4j:2.11.5'
 }
 
 processResources {
