--- a/build.gradle
+++ b/build.gradle
@@ -21,18 +21,19 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    //modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     // Fabric API
     modImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
+    modImplementation(fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version))
     modImplementation(fabricApi.module("fabric-key-binding-api-v1", project.fabric_version))
 
     // ModMenu
     modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
-    modLocalRuntime("com.terraformersmc:modmenu:${project.mod_menu_version}")
+    modLocalRuntime "com.terraformersmc:modmenu:${project.mod_menu_version}"
 
     // Continuity
-    modLocalRuntime("maven.modrinth:continuity:3.0.0-beta.3+1.20.1")
+    modLocalRuntime "maven.modrinth:continuity:3.0.0-beta.3+1.20.1"
 
     // zip4j
     implementation "net.lingala.zip4j:zip4j:2.11.5"
