--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,9 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     //modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modLocalRuntime "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     // Fabric API
-    modImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
     modImplementation(fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version))
     modImplementation(fabricApi.module("fabric-key-binding-api-v1", project.fabric_version))
 
