--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'fabric-loom' version '1.3-SNAPSHOT'
     id 'maven-publish'
+    id "com.modrinth.minotaur" version "2.+"
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
@@ -29,8 +30,8 @@ dependencies {
     modImplementation(fabricApi.module("fabric-key-binding-api-v1", project.fabric_version))
 
     // ModMenu
-    modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
-    modLocalRuntime "com.terraformersmc:modmenu:${project.mod_menu_version}"
+    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+    modLocalRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"
 
     // Continuity
     modLocalRuntime "maven.modrinth:continuity:3.0.0-beta.3+1.20.1"
@@ -50,7 +51,7 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
     // Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
-    it.options.release = 17
+    it.options.release.set(17)
 }
 
 java {
@@ -62,7 +63,7 @@ java {
 
 jar {
     from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}" }
+        rename { "${it}_${archivesBaseName}" }
     }
 }
 
@@ -82,3 +83,28 @@ publishing {
         // retrieving dependencies.
     }
 }
+
+modrinth {
+    token = System.getenv("MODRINTH_TOKEN")
+    // Remember to have the MODRINTH_TOKEN environment variable set or else this will fail - just make sure it stays private!
+    projectId = "ctm-selector" // This can be the project ID or the slug. Either will work!
+    versionName = "[$project.minecraft_version] $archivesBaseName $version"
+    versionNumber = "$version"
+    // You don't need to set this manually. Will fail if Modrinth has this version already
+    versionType = "release" // This is the default -- can also be `beta` or `alpha`
+    uploadFile = remapJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
+    gameVersions = ["1.20", "1.20.1"] // Must be an array, even with only one version
+    loaders = ["fabric"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
+    dependencies { // A special DSL for creating dependencies
+        // scope.type
+        // The scope can be `required`, `optional`, `incompatible`, or `embedded`
+        // The type can either be `project` or `version`
+        required.project "fabric-api" // Creates a new required dependency on Fabric API
+        required.project "continuity"
+        optional.version "modmenu", "$project.modmenu_version"
+    }
+    changelog = file("changelogs/latest.md").exists() ? file("changelogs/latest.md").getText() : "No changelog provided"
+    syncBodyFrom = rootProject.file("README.md").text
+    debugMode = false // Stops version from being published
+}
+tasks.modrinth.dependsOn(tasks.modrinthSyncBody)
