test to display textures now works

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     modLocalRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"
 
     // Continuity
-    modLocalRuntime "maven.modrinth:continuity:3.0.0-beta.3+1.20.1"
+    //modLocalRuntime "maven.modrinth:continuity:3.0.0-beta.3+1.20.1"
 
     // zip4j
     implementation "net.lingala.zip4j:zip4j:2.11.5"
