--- a/build.gradle
+++ b/build.gradle
@@ -93,7 +93,7 @@ modrinth {
     // You don't need to set this manually. Will fail if Modrinth has this version already
     versionType = "release" // The default is `release` -- can also be `beta` or `alpha`
     uploadFile = remapJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
-    gameVersions = ["1.20.2"] // Must be an array, even with only one version
+    gameVersions = ["1.20.4"] // Must be an array, even with only one version
     loaders = ["fabric"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
     dependencies { // A special DSL for creating dependencies
         // scope.type
@@ -105,6 +105,6 @@ modrinth {
     }
     changelog = file("changelogs/latest.md").exists() ? file("changelogs/latest.md").getText() : "No changelog provided"
     syncBodyFrom = rootProject.file("README.md").text
-    debugMode = true // Stops version from being published
+    debugMode = false // Stops version from being published
 }
 tasks.modrinth.dependsOn(tasks.modrinthSyncBody)
