--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.4-SNAPSHOT'
+    id 'fabric-loom' version '1.5-SNAPSHOT'
     id 'maven-publish'
     id "com.modrinth.minotaur" version "2.+"
 }
@@ -10,7 +10,7 @@ group = project.maven_group
 
 repositories {
     maven { url = "https://api.modrinth.com/maven" }
-    maven { url "https://maven.terraformersmc.com/releases" }
+    maven { url = "https://maven.terraformersmc.com/releases" }
 }
 
 dependencies {
