--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/versions.html
 minecraft_version=1.20.2
 yarn_mappings=1.20.2+build.4
-loader_version=0.15.0
+loader_version=0.15.10
 # Mod Properties
 mod_version=0.2.2
 maven_group=fr.aeldit.ctms
-archives_base_name=CTM Selector
+archives_base_name=ctm-selector
 # Dependencies
-fabric_version=0.91.2+1.20.2
+fabric_version=0.91.6+1.20.2
 modmenu_version=8.0.1
