--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.10
+minecraft_version=1.20.6
+yarn_mappings=1.20.6+build.1
+loader_version=0.15.11
 # Mod Properties
 mod_version=0.3.0
 maven_group=fr.aeldit.ctms
 archives_base_name=ctm-selector
 # Dependencies
-fabric_version=0.97.0+1.20.4
-modmenu_version=9.0.0
+fabric_version=0.97.8+1.20.6
+modmenu_version=10.0.0-beta.1
