--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,6 @@ plugins {
     id "com.modrinth.minotaur" version "2.+"
 }
 
-version = project.mod_version + "+" + project.minecraft_version
-
 repositories {
     maven { url = "https://api.modrinth.com/maven" }
     maven { url = "https://maven.terraformersmc.com/releases" }
@@ -28,7 +26,7 @@ dependencies {
     modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
 
     // Continuity
-    modLocalRuntime "maven.modrinth:continuity:3.0.0-beta.4+1.20.2"
+    //modLocalRuntime "maven.modrinth:continuity:3.0.0-beta.4+1.20.2"
 
 
     // zip4j
@@ -57,7 +55,7 @@ modrinth {
 
     projectId = "ctm-selector"
     versionName = "[$project.minecraft_version] CTM Selector $project.mod_version"
-    versionNumber = "$version"
+    versionNumber = "$project.mod_version+$project.minecraft_version"
     versionType = "beta"
 
     uploadFile = remapJar
